[package]
name = "cloudflare-ddns"
version = "0.3.1"
edition = "2024"

[features]
default = []
dev-build = []
trace = ["tokio/tracing", "dep:console-subscriber"]


[dependencies]
tokio                 = { version = "1.44.2", features = ["full"] }
futures               = { version = "0.3.31"}
serde                 = { version = "1.0.219", features = ["derive", "rc"] }
anyhow                = { version = "1.0.95", features = ["backtrace"] }
ip_macro              = { version = "*", path = "../ip_macro" }
console-subscriber    = { version = "0.4.1", optional = true }
simdutf8              = "0.1.5"
url                   = "2.5.4"
toml                  = "0.8.19"
serde_json            = "1.0.128"
bytes                 = "1.9.0"
thiserror             = "2.0.11"
ahash                 = "0.8.11"
arc-swap              = "1.7.1"
notify                = "8.0.0"
notify-debouncer-full = "0.5.0"
idna                  = "1.0.2"

[dependencies.reqwest]
version = "0.12.15"
default-features = false
features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "stream",
    "rustls-tls-native-roots",
    "brotli",
    "zstd",
    "deflate",
    "default",
    "gzip",
    "json"
]


[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.7", features = ["futures"] }
dbus-tokio = "0.7.6"
simple_logger = { version = "5.0.0", features = ["colors", "threads", "timestamps", "stderr"] }
systemd-journal-logger = "2.1.1"
log = "0.4.21"
tempfile = "3.13.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.0", features = ["user"] }

[target.'cfg(windows)'.dependencies]
windows-core = "0.59.0"


[target.'cfg(windows)'.dependencies.windows]
version = "0.61.3"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_EventNotificationService",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_NetworkManagement",
    "Win32_Networking",
    "Win32_Networking_WinInet",
    "Win32_Networking_NetworkListManager"
]


[target.'cfg(windows)'.dependencies.windows-implement]
version = "0.59.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation      = "0.10.0"
core-foundation-sys  = "0.8.6"
system-configuration = "0.6.1"

[build-dependencies]
tokio = { version = "1.44.2", features = ["rt", "macros", "fs", "io-util", "process"] }
anyhow = "1.0.95"
artifact-dependency = "0.1.7"